Fix contrast when selecting text.

--- a/modules/site/src/main/resources/microsite/css/gcn-overrides.scss
+++ b/modules/site/src/main/resources/microsite/css/gcn-overrides.scss
@@ -65,3 +65,11 @@ blockquote {
     color: #777;
   }
 }
+
+::selection {
+  background: #0095ff; /* WebKit/Blink Browsers */
+}
+
+::-moz-selection {
+  background: #0095ff; /* Gecko Browsers */
+}
